# telegram-bot

./: .env.example  .gitignore  README.md  install.bat  pyproject.toml  start.bat
src/telegram_bot/: __init__.py  bot.py  exceptions.py  handlers.py
src/telegram_bot/config/: __init__.py  constants.py  settings.py
tests/: __init__.py  conftest.py  test_bot.py  test_handlers.py  test_settings.py
tools/: tests.bat
